Fix up the Profile page; change the .less file so the height is only applied to the input type=input element; this fixes the checkbox alignment.

--- a/branches/arisia_prod/webpages/css/zambia.less
+++ b/branches/arisia_prod/webpages/css/zambia.less
@@ -73,7 +73,7 @@ header {
   color: @color;
 }
 
-input {
+input[type=input] {
   height: 28px;
 }
 
